--- a/test-latency-configuration/docker-compose.yaml
+++ b/test-latency-configuration/docker-compose.yaml
@@ -1,4 +1,5 @@
 version: "3"
+
 services:
   mongodb:
     image: mongo:latest
@@ -10,12 +11,15 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: test
       MONGO_INITDB_DATABASE: test-latency-configuration
     networks:
-      - test-network
+      - mongo-db-network
     restart: always
     volumes:
       - ./docker-entrypoint-initdb.d/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - mongodb-data:/data/db
+
 networks:
-  test-network:
+  mongo-db-network:
+    driver: bridge
+
 volumes:
   mongodb-data:
