--- a/test-latency-configuration/docker-compose.yaml
+++ b/test-latency-configuration/docker-compose.yaml
@@ -3,13 +3,13 @@ version: "3"
 services:
   mongodb:
     image: mongo:latest
-    container_name: mongodb-test
+    container_name: mongodb-yourfinaces
     ports:
       - "27017:27017"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: test
-      MONGO_INITDB_ROOT_PASSWORD: test
-      MONGO_INITDB_DATABASE: test-latency-configuration
+      MONGO_INITDB_ROOT_USERNAME: your-finances
+      MONGO_INITDB_ROOT_PASSWORD: yourFinances123
+      MONGO_INITDB_DATABASE: your-finances-auth
     networks:
       - mongo-db-network
     restart: always
