--- a/test-latency-configuration/docker-compose.yaml
+++ b/test-latency-configuration/docker-compose.yaml
@@ -3,6 +3,7 @@ version: "3"
 services:
   mongodb:
     image: mongo:latest
+    hostname: mongodb
     container_name: mongodb-yourfinances
     ports:
       - "27017:27017"
