--- a/test-latency-configuration/docker-compose.yaml
+++ b/test-latency-configuration/docker-compose.yaml
@@ -1,11 +1,11 @@
 version: "3"
 
 services:
-  mongodb:
+  mongodb-service:
     image: mongo:latest
-    container_name: mongodb-yourfinances
+    container_name: mongo-yourfinances
     ports:
-      - "27017:27017"
+      - 27017:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: your-finances
       MONGO_INITDB_ROOT_PASSWORD: yourFinances123
